syntax = "proto3";
package POGOLib.Pokemon.Proto.Map;

import public "Map/SpawnPoint.proto";
import public "Map/Fort/FortData.proto";
import public "Map/Fort/FortSummary.proto";
import public "Map/Pokemon/NearbyPokemon.proto";
import public "Map/Pokemon/WildPokemon.proto";
import public "Map/Pokemon/MapPokemon.proto";

// A cell is a geographical "zone" containing objects like pokemon, gyms, and pokestops.
message MapCell {
  // S2 geographic area that the cell covers (http://s2map.com/) (https://code.google.com/archive/p/s2-geometry-library/)
  uint64 s2_cell_id = 1;
  int64 current_timestamp_ms = 2;
  repeated POGOLib.Pokemon.Proto.Map.Fort.FortData forts = 3;
  repeated POGOLib.Pokemon.Proto.Map.SpawnPoint spawn_points = 4;
  repeated string deleted_objects = 6;
  bool is_truncated_list = 7;
  repeated POGOLib.Pokemon.Proto.Map.Fort.FortSummary fort_summaries = 8;
  repeated POGOLib.Pokemon.Proto.Map.SpawnPoint decimated_spawn_points = 9;

  // Pokemon within 2 steps or less.
  repeated POGOLib.Pokemon.Proto.Map.Pokemon.WildPokemon wild_pokemons = 5;
  // Pokemon within 1 step or none.
  repeated POGOLib.Pokemon.Proto.Map.Pokemon.MapPokemon catchable_pokemons = 10;
  // Pokemon father away than 2 steps, but still in the area.
  repeated POGOLib.Pokemon.Proto.Map.Pokemon.NearbyPokemon nearby_pokemons = 11;
}
