syntax = "proto3";
package POGOLib.Pokemon.Proto.Map;

enum MapObjectsStatus {
  UNSET_STATUS = 0;
  SUCCESS = 1;
  LOCATION_UNSET = 2;
}
