syntax = "proto3";
package POGOLib.Pokemon.Proto;

import "Map/MapCell.proto";
import "Map/MapObjectsStatus.proto";

message MapObjects {
  repeated POGOLib.Pokemon.Proto.Map.MapCell map_cells = 1;
  POGOLib.Pokemon.Proto.Map.MapObjectsStatus status = 2;
}
